--- a/SingalRClientExample/index.html
+++ b/SingalRClientExample/index.html
@@ -8,22 +8,65 @@
         const connection = new signalR.HubConnectionBuilder()
         .withUrl("https://localhost:5001/myhub", {
       skipNegotiation: true,
-      transport: signalR.HttpTransportType.WebSockets
-    }).build();
-        connection.start();
+      transport: signalR.HttpTransportType.WebSockets})
+        .withAutomaticReconnect([1000, 1000, 2000, 3000, 5000, 10000]) //0 - 2 - 10 - 30 saniye aralıklarla bağlanmayı deneyecek
+        .build();
+
+        async function start(){
+            try {
+                connection.start();
+            } catch (error) {
+                setTimeout(()=> start(), 2000); 
+            }
+        }
+        //connection.start();
+        start();
+        const durum = $("#durum");
+        connection.onreconnecting(error => {
+            durum.css("background-color","blue");
+            durum.css("color","white");
+            durum.html("Bağlantı kuruluyor......");
+            durum.fadeIn(2000,()=> {
+                setTimeout(() => {durum.fadeOut(2000);
+                }, 2000)
+            });
+        });
+        connection.onreconnected(connectionId => {
+            durum.css("background-color","green");
+            durum.css("color","white");
+            durum.html("Bağlantı kuruldu......");
+            durum.fadeIn(2000,()=> {
+                setTimeout(() => {durum.fadeOut(2000);
+                }, 2000)
+            });
+        });
+        connection.onclose(connectionId => {
+            durum.css("background-color","red");
+            durum.css("color","white");
+            durum.html("Bağlanılamadı......");
+            durum.fadeIn(2000,()=> {
+                setTimeout(() => {durum.fadeOut(2000);
+                }, 2000)
+            });
+        });
+
         $("#btnGonder").click(()=> {
             let message = $("#txtMessage").val();
             connection.invoke("SendMessage",message).catch(error => console.log(`Mesaj gönderilirken hata oluştu. ${error}`));
         });
         connection.on("receiveMessage", message => {
-        $("div").append(message + "<br>");
-        })
+        $("#mesajlar").append(message + "<br>");
+        });
+        //Bağlantı hiç oluşturulmazsa
+
+
     });
 </script> 
 </head>
 <body>
+    <div id = "durum" style="display: none;"></div>
     <input type="text" id="txtMessage">
     <button id="btnGonder">Gönder</button>
-    <div></div>
+    <div id = "mesajlar" ></div>
 </body>
 </html>
