Hub Clients Metotları implemente edildi

--- a/SingalRClientExample/index.html
+++ b/SingalRClientExample/index.html
@@ -72,14 +72,24 @@
         $("#btnGonder").click(()=> {
             let message = $("#txtMessage").val();
             let connectionIds = $("#connectionIds").val().split(",");
-            connection.invoke("SendMessage",message,connectionIds).catch(error => console.log(`Mesaj gönderilirken hata oluştu. ${error}`));
+            let groups = $("#txtGroups").val().split(",");
+            // connection.invoke("SendMessage",message,connectionIds).catch(error => console.log(`Mesaj gönderilirken hata oluştu. ${error}`));
+            connection.invoke("SendMessage",message,groups[0]).catch(error => console.log(`Mesaj gönderilirken hata oluştu. ${error}`));
+
         });
         connection.on("receiveMessage", message => {
         $("#mesajlar").append(message + "<br>");
         });
         //Bağlantı hiç oluşturulmazsa
+        let _connectionId = "";
         connection.on("getConnectionId", connectionId=> {
+            _connectionId = connectionId;
             $("#connectionId").html(`Connection Id : ${connectionId}`);
+        });
+        $("#btnGrubaGir").click(()=> {
+            let groupName = $("input[name=grup]:checked").val();
+            connection.invoke("addGroup",_connectionId,groupName).catch(error => console.log(`Mesaj gönderilirken hata oluştu. ${error}`));
+
         });
 
     });
@@ -87,11 +97,26 @@
 </head>
 <body>
 <div style="background-color: black; color: white;" id="connectionId"></div>
+<br>
+<br>
+<input type="radio" name="grup" value="A">A
+<input type="radio" name="grup" value="B">B
+<input type="radio" name="grup" value="C">C
 
+<button id="btnGrubaGir">Gruba Gir</button>
     <div id = "durum" style="display: none;"></div>
-    <input type="text" id="txtMessage">
-    <textarea id="connectionIds" cols="30" rows="10"></textarea>
-    <button id="btnGonder">Gönder</button>
+    <br>
+    <br>
+    <input type="text" id="txtMessage" placeholder="Mesaj" style="width: 216px;">
+    <br>
+    <br>  
+     <input type="text" id="txtGroups" placeholder="Groups" style="width: 216px;">
+    <br>
+    <br>
+    <textarea id="connectionIds" cols="30" rows="10" placeholder="Connection Id"></textarea>
+    <br>
+    <br>
+    <button id="btnGonder" style="width: 223px; height: 25px;">Gönder</button>
     <div id = "mesajlar" ></div>
 
     <!-- <div>
