--- a/SingalRClientExample/index.html
+++ b/SingalRClientExample/index.html
@@ -50,13 +50,16 @@
             })
         })
 
-
+        connection.on("receiveMessage", message => {
+            const _message = $(".message").clone();
+            _message.removeClass("message");
+            _message.find("p").html(message);
+            $(".messages").append(_message);
+        })
         $("#btnGonder").click(() =>{
-            var x = $(".message").clone();
-            x.removeClass("message");
-            x.find("h5")[1].innerHTML = "";
-            x.find("h5")[0].innerHTML = "";
-            $(".messages").append(x);
+            const clientName = $(".users.active").first().html();
+            const message = $("#txtMesaj").val();
+            connection.invoke("SendMessageAsync" ,message, clientName);
         }) 
     })
 </script> 
@@ -91,18 +94,16 @@
 
                     </div>
                     <!--Mesajlaşma-->
-                    <textarea class="form-control" style="margin-top: 5px;" placeholder="İletilecek mesajı buraya giriniz."
-                    rows="3"></textarea>
+                    <textarea class="form-control" style="margin-top: 5px;" placeholder="İletilecek mesajı buraya giriniz." rows="3" id="txtMesaj"></textarea>
                     <button type="button" class="btn btn-light rightButton" id="btnGonder">Gönder</button>
                     <br><br><br>
-                    <div class="list-group">
-                        <a class="list-group-item list-group-item-action" aria-current="true">
+                    <div class="list-group messages">
+                        <a class="list-group-item list-group-item-action message" aria-current="true">
                             <div class="d-flex w-100 justify-content-between">
-                                <h5 class="mb-1">Ahmet</h5>
-                                <h5 class="mb-2">Sen</h5>
+                                <h5 class="mb-1"></h5>
+                                <h5 class="mb-2"></h5>
                             </div>
-                            <p class="mb-1">Merhaba buraya bir yazı yazıyoruki buraki boşluk dolsun</p>
-                            <small>Buraya yazılabilecek en güzel yazı</small>
+                            <p class="mb-1"></p>
                         </a>
                     </div>
                     <!--Mesajlaşma-->
