--- a/SingalRClientExample/index.html
+++ b/SingalRClientExample/index.html
@@ -50,10 +50,11 @@
             })
         })
 
-        connection.on("receiveMessage", message => {
+        connection.on("receiveMessage", (message,nickName) => {
             const _message = $(".message").clone();
             _message.removeClass("message");
             _message.find("p").html(message);
+            _message.find("h5")[0].innerHTML = nickName ;
             $(".messages").append(_message);
         })
         $("#btnGonder").click(() =>{
