--- a/SingalRClientExample/index.html
+++ b/SingalRClientExample/index.html
@@ -61,6 +61,12 @@
             const clientName = $(".users.active").first().html();
             const message = $("#txtMesaj").val();
             connection.invoke("SendMessageAsync" ,message, clientName);
+
+            const _message = $(".message").clone();
+            _message.removeClass("message");
+            _message.find("p").html(message);
+            _message.find("h5")[1].innerHTML = "Sen" ;
+            $(".messages").append(_message);
         }) 
     })
 </script> 
