Added SendMessageToGroup method
I finished a simple chat application that I made using SignalR. On this application, users; they can send a direct message to a user, send a message to all users, create and join a new room, and send messages only to users who have joined that room.

--- a/SingalRClientExample/index.html
+++ b/SingalRClientExample/index.html
@@ -68,12 +68,26 @@
             _message.find("h5")[1].innerHTML = "Sen" ;
             $(".messages").append(_message);
         }) 
+        let _groupName = "";
+
+        $("#btnGrubaGonder").click(() => {
+            const message = $("#txtMesaj").val();
+            if(_groupName != ""){
+                connection.invoke("SendMessageToGroup", _groupName, message);
+                const _message = $(".message").clone();
+            _message.removeClass("message");
+            _message.find("p").html(message);
+            _message.find("h5")[1].innerHTML = "Sen" ;
+            $(".messages").append(_message);
+            }
+        })
         $("#btnOdaOlustur").click(()=> {
             connection.invoke("AddGroup", $("#txtOdaAdi").val());
         });
 
         connection.on("groups", groups => {
-            let options = "";
+            $(".rooms").html("");
+            let options = `<option selected value="-1">Odalar</option>`;
             $.each(groups,(index,item) => {
                 options += `<option value="${item.groupName}">${item.groupName}</option>`;
             });
@@ -89,6 +103,7 @@
         });
         $(".rooms").change(function() {
             let groupName = $(this).val();
+            _groupName = groupName[0];
             connection.invoke("GetClientToGroup", groupName[0]);
         });
     })
@@ -130,6 +145,7 @@
                     <!--Mesajlaşma-->
                     <textarea class="form-control" style="margin-top: 5px;" placeholder="İletilecek mesajı buraya giriniz." rows="3" id="txtMesaj"></textarea>
                     <button type="button" class="btn btn-light rightButton" id="btnGonder">Gönder</button>
+                    <button type="button" class="btn btn-light rightButton" id="btnGrubaGonder">Gruba Gönder</button>
                     <br><br><br>
                     <div class="list-group messages">
                         <a class="list-group-item list-group-item-action message" aria-current="true">
