--- a/ClientForApi/index.html
+++ b/ClientForApi/index.html
@@ -6,6 +6,15 @@
 <script>
     
 $(document).ready(() => {
+    var connection = new signalR.HubConnectionBuilder()
+    .withUrl("https://localhost:5001/messagehub")
+    .build();
+    connection.start();
+    connection.on("receiveMessage", message => {
+        $("div").html(message);
+        $("div").fadeIn(2000, () => { });
+
+    });
     $("button").click(() => {
        let email = $("#txtEmail").val();
        let message = $("#txtMessage").val();
@@ -13,13 +22,14 @@ $(document).ready(() => {
            Email : email,
            Message : message
        }, () => {
-           
+
        });
     });
 });
 </script>
 </head>
 <body>
+    <div style="background-color: darkorchid; display: none;"></div>
    <input type="email" id="txtEmail" placeholder="Email"> <br>
    <input type="text" id="txtMessage" placeholder="Mesaj"> <br>
    <button>Gönder</button>
